# stonky

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  demo.cfg  example.cfg  makefile  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  push.yml  unittest.yml
assets/: screenshot.eps
stonky/: __example.cfg  __main__.py  __version__.py  api.py  cli.py  config.py  const.py  enums.py  exceptions.py  forex.py  settings.py  stock.py  stock_store.py  tty.py  typedef.py  types.py  view.py
tests/: __init__.py  fixtures.py  test_api.py  test_stock.py  test_stock_store.py
