[metadata]
name = stonky
version = attr: stonky.__version__.VERSION
description = Command line dashboard for monitoring stocks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkwill87/teletype
license = MIT
license_files = LICENSE.txt
author = Jessy Williams
author_email = jessy@jessywilliams.com
maintainer = Jessy Williams
maintainer_email = jessy@jessywilliams.com


[options]
python_requires = >=3.7
packages = find:

install_requires =
    aiohttp~=3.8.1
    teletype~=1.3.4
    typing-extensions~=4.1.1

[options.package_data]
* = LICENSE.txt,README.md,py.typed

[options.entry_points]
console_scripts =
    teletype = teletype.__main__:main

[options.extras_require]
dev =
    black~=22.3.0
    build~=0.7.0
    isort~=5.10.1
    mypy~=0.931
    pylint~=2.13.4
    twine~=4.0.0
    vbump~=1.2.0
    wheel~=0.37.1
    types-setuptools

test =
    pytest~=7.1.1
